--- a/styles.css
+++ b/styles.css
@@ -33,16 +33,7 @@ nav {
   font-size: 25px;
 }
 
-.navbar-links {
-  display: flex;
-  justify-content: space-around;
-  width: 30%
-}
 
-
-.navbar-links li {
-  list-style: none;
-}
 
 
 .navbar-links a {
@@ -139,7 +130,7 @@ header {
 
 .btn {
   display: inline-block;
-  padding: 50px 50px;
+  padding: 20px 20px;
   font-weight: bold;
   font-size: 25px;
   text-decoration: none;
@@ -150,6 +141,7 @@ header {
 .quote {
   text-align: center;
   font-size: 20px;  
+  text-overflow: clip;
 
 
 }
