--- a/styles.css
+++ b/styles.css
@@ -1,147 +1,105 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
+/* main layout stuff */ 
+
+
+body { 
+  margin: 0 ; 
+  font-weight: 400 ; 
+  font-family: 'Ubuntu', sans-serif ; 
+} 
+
+
+h1 { 
+  margin: 0 ; 
+  font-weight: 400; 
+  color: #143774 ; 
+  font-size: 2rem ; 
 }
 
 
-h1,
-h2,
-p {
-  margin-top: 0;
+header { 
+  background: #F8F8F8;
+  padding: 2em 0 ; 
+} 
+
+nav ul { 
+  list-style: none; 
+  display: flex ; 
+  justify-content: center; 
+  padding: 0 ; 
 }
 
 
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+nav a {  
+  text-decoration: none ; 
+  color: #707070 ;  
+  font-weight: 700 ; 
+  padding: .25em ; 
 }
 
-nav {
-  display: flex;
+
+nav li { 
+  margin-left: 2em ; 
+} 
+
+nav a:hover, 
+nav a:focus {  
+  color: #1792d2 ; 
+}
+
+
+
+
+/* general stuff */ 
+.subtitle {    
+  font-weight: 700; 
+  color: #1792d2 ; 
+  font-size: .75rem ; 
+  text-transform: uppercase; 
+  margin: 0 ; 
+} 
+
+
+.homepage { 
+  border-bottom: 1px solid #707070; 
+} 
+
+.homepage:hover { 
+  color: #707070 ; 
+}
+
+
+.container { 
+  width: 90% ; 
+  max-width: 990px;
+  margin: 0 auto ; 
+}
+
+
+.container-nav { 
+  display: flex ; 
   justify-content: space-around;
-  align-items: center;
-  min-height: 10px;
-  background-color: #5d4954;
-  font-family: 'Poppins', sans-serif;
+  flex-direction: column; 
 }
 
-.container {
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  font-size: 25px;
-}
+@media (max-width: 675px) { 
+  .container-nav { 
+      flex-direction: column; 
 
-
-
-
-.navbar-links a {
-  color: rgb(226, 226, 226);
-  text-decoration: none;
-  letter-spacing: 5px;
-  font-weight: bold;
-  font-size: 15px;
-  cursor: pointer;
-  position: relative;
-}
-
-
-h1 {
-
-  -webkit-animation: fadein 5s;
-  /* safari, chrome & opera */
-  -moz-animation: fadein 5s;
-  /* firefox */
-  -ms-animation: fadein 5s;
-  /* IE */
-  -o-animation: fadein 5s;
-  /* Opera */
-  animation: fadein 5s;
-}
-
-@keyframes fadein {
-  from {
-    opacity: 0;
   }
 
-  to {
-    opacity: 1;
+  header { 
+      text-align: center; 
+  }
+
+  nav ul { 
+      flex-direction: column; 
+  }
+
+  nav li { 
+      margin: .5em 0em ; 
   }
 }
 
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-/* IE */
-@-ms-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-
-/* OPERA */
-@-o-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-
-p {
-  font-size: 20px;
-}
-
-
-header {
-  padding: 10px;
-  background: #EF0107;
-  text-align: center;
-}
-
-.btn {
-  display: inline-block;
-  padding: 20px 20px;
-  font-weight: bold;
-  font-size: 25px;
-  text-decoration: none;
-  margin-left: 200px;
-  margin-top: 100px;
-}
-
-.quote {
-  text-align: center;
-  font-size: 20px;  
-  text-overflow: clip;
-
-
+.btn { 
+  font-size: 18px ; 
 }
